--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,6 +11,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-20.04
+job runs-on:         
+ permissions:
+ actions: read
+ contents: read
+ security-events: write
 
     steps:
       - uses: actions/checkout@v4
@@ -19,6 +24,16 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
+
+      - name: Analyze with CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: python
+          
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
+        with:
+         category: "/language:${{matrix.language}}"
 
       - name: Create and start virtual environment
         run: |
